# troop-website

./: .gitignore  README.md  angular.json  db.json  package-lock.json  package.json
client/: db.json  package-lock.json
client/src/app/: app.component.html  app.component.ts
client/src/app/events/: events.service.ts
client/src/app/events/event-card/: event-card.component.scss  event-card.component.ts
client/src/app/events/past-events-component/: past-events.component.ts
server/: Cargo.toml  diesel.toml
server/src/: main.rs
src/: index.html  styles.css  styles.scss
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts  upcomingevent.ts
src/app/event-details/: event-details.component.ts
src/app/events/: event.model.ts  events.service.ts
src/app/events/add-event-dialog/: add-event-dialog.component.html  add-event-dialog.component.ts
src/app/events/event-card/: event-card.component.html  event-card.component.scss  event-card.component.ts
src/app/events/event-details/: event-details.component.html  event-details.component.ts
src/app/events/upcoming-events/: upcoming-events.component.html  upcoming-events.component.scss  upcoming-events.component.ts
src/app/shared/confirmation-dialog/: confirmation-dialog.component.ts
src/app/upcoming-events/: upcoming-events.component.css  upcoming-events.component.html  upcoming-events.component.ts  upcoming-events.service.ts  upcomingevent.ts
src/app/volunteer/: volunteer.component.ts
(+1 files in other folders)
