[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = "2.2.12"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
